--- a/Display/Base.lproj/Main.storyboard
+++ b/Display/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8pS-Yi-WJB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -352,13 +352,17 @@
                     <navigationItem key="navigationItem" id="zEn-pm-CrR">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="ic-list" id="C7N-La-7Bo">
                             <connections>
-                                <segue destination="Mpz-7W-jnw" kind="custom" id="JyR-ou-SPx"/>
+                                <action selector="menuBtn:" destination="BYZ-38-t0r" id="mfG-nQ-OqP"/>
+                                <segue destination="Mpz-7W-jnw" kind="custom" identifier="toMenu1" id="JyR-ou-SPx"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="ic-history" id="kk9-sL-qjt"/>
                     </navigationItem>
                     <value key="contentSizeForViewInPopover" type="size" width="414" height="919"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="Ova-4l-qCX" id="8vG-nS-JTl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -461,18 +465,18 @@
                                                     <constraint firstAttribute="width" constant="315" id="800-2m-yCf"/>
                                                 </constraints>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="dSa-Nb-0A2">
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="Axn-Ca-rOF">
                                                         <rect key="frame" x="0.0" y="44.5" width="315" height="100"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dSa-Nb-0A2" id="6Zq-HE-iMw">
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Axn-Ca-rOF" id="Slc-S2-RzR">
                                                             <rect key="frame" x="0.0" y="0.0" width="315" height="100"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </tableViewCellContentView>
                                                     </tableViewCell>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="Axn-Ca-rOF">
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="dSa-Nb-0A2">
                                                         <rect key="frame" x="0.0" y="144.5" width="315" height="100"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Axn-Ca-rOF" id="Slc-S2-RzR">
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dSa-Nb-0A2" id="6Zq-HE-iMw">
                                                             <rect key="frame" x="0.0" y="0.0" width="315" height="100"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </tableViewCellContentView>
@@ -595,6 +599,9 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="AwM-Xv-MLf" firstAttribute="leading" secondItem="5uj-NS-qLc" secondAttribute="leading" id="wYg-PM-ZYY"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xw8-Tp-dBx"/>
